Fix footer alignment in desktop size

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,6 +25,12 @@
   color: var(--soft-red);
 }
 
+.Footer--links-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .Footer--icon-container {
   display: flex;
   flex-direction: row;
@@ -38,4 +44,25 @@
 
 .Footer--icon:hover {
   fill: var(--soft-red);
+}
+
+@media screen and (min-width: 1100px) {
+  .Footer--container {
+    flex-direction: row;
+    padding: 40px 150px;
+  }
+
+  .Footer--logo {
+    margin-bottom: 0;
+    margin-right: 25px;
+  }
+
+  .Footer--links-container {
+    flex: 1;
+    flex-direction: row;
+  }
+
+  .Footer--link {
+    margin: 25px;
+  }
 }
